[gd_scene load_steps=3 format=3 uid="uid://ccv67m40g1020"]

[ext_resource type="Script" uid="uid://3sib288rtk6w" path="res://scripts/deathscreenstats.gd" id="1_mxxeu"]
[ext_resource type="Script" uid="uid://b1acmtviybnkg" path="res://scripts/death_screen.gd" id="1_xay11"]

[node name="Node2D" type="Node2D"]

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.414143, 0.322853, 0.425075, 1)
offset_right = 1152.0
offset_bottom = 640.0
scale = Vector2(1, 1.01371)
script = ExtResource("1_mxxeu")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 272.0
mouse_filter = 0
mouse_force_pass_scroll_events = false
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 150
text = "You Died"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StepsLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 253.0
offset_right = 256.0
offset_bottom = 316.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="DistanceLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 316.0
offset_right = 256.0
offset_bottom = 379.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="CampfireLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 379.0
offset_right = 256.0
offset_bottom = 442.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="LootLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 712.0
offset_top = 253.0
offset_right = 896.0
offset_bottom = 315.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="ExpLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 704.0
offset_top = 316.0
offset_right = 896.0
offset_bottom = 379.0

[node name="Button" type="Button" parent="."]
offset_left = 784.0
offset_top = 448.0
offset_right = 1012.0
offset_bottom = 592.0
scale = Vector2(1.08, 0.88)
theme_override_font_sizes/font_size = 32
text = "Try Again"
script = ExtResource("1_xay11")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
